Added phd thesis info

--- a/index.html
+++ b/index.html
@@ -1859,13 +1859,43 @@
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													On Fairness Concerns in the Blockchain Ecosystem
+												</h6>
+											<li>
+												<script>document.write(get_authors(["johnnatan_messias"]))</script>
+											</li>
+											<li>PhD Thesis. <a href="https://mpi-sws.org">Max Planck Institute for Software Systems (MPI-SWS)</a> & <a href="https://www.uni-saarland.de/en/">Saarland University (UdS)</a>. 2023.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#phd-thesis"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="./pdf/phd-thesis_johnnatan_messias.pdf"
+														target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+											</ul>
+											</li>
+											<div id="phd-thesis" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> 
+													Blockchains revolutionized centralized sectors like banking and finance by promoting decentralization and transparency. In a blockchain, information is transmitted through transactions issued by participants or applications. Miners crucially select, order, and validate pending transactions for block inclusion, prioritizing those with higher incentives or fees. The order in which transactions are included can impact the blockchain final state.
+												<br><br>Moreover, applications running on top of a blockchain often rely on governance protocols to decentralize the decision-making power to make changes to their core functionality. These changes can affect how participants interact with these applications. Since one token equals one vote, participants holding multiple tokens have a higher voting power to support or reject the proposed changes. The extent to which this voting power is distributed is questionable and if highly concentrated among a few holders can lead to governance attacks.
+												<br><br>In this thesis, we audit the Bitcoin and Ethereum blockchains to investigate the norms followed by miners in determining the transaction prioritization. We also audit decentralized governance protocols such as Compound to evaluate whether the voting power is fairly distributed among the participants. Our findings have significant implications for future developments of blockchains and decentralized applications.
+												</p>
+											</div>
+										</ul>
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
 													Characterizing Interconnections And Linguistic Patterns In Twitter
 												</h6>
 											<li>
-												<script>document.write(get_authors(["johnnatan_messias", "fabricio_benevenuto"]))</script>
+												<script>document.write(get_authors(["johnnatan_messias"]))</script>
 											</li>
-											<li>Master Thesis. Computer Science Department. Universidade Federal de
-												Minas Gerais (UFMG). 2017.</li>
+											<li>Master Thesis. Computer Science Department. <a href="https://ufmg.br">Universidade Federal de Minas Gerais (UFMG)</a>. 2017.</li>
 
 											<ul class="list-inline">
 												<li class="list-inline-item"><a href="#master-thesis"
@@ -1926,10 +1956,9 @@
 													Framework para Sistemas de Navegação de Veículos Aéreos não
 													Tripulados</h6>
 											<li>
-												<script>document.write(get_authors(["johnnatan_messias", ""]))</script>
+												<script>document.write(get_authors(["johnnatan_messias"]))</script>
 											</li>
-											<li>Bachelor Thesis. Computer Science Department. Universidade Federal de
-												Ouro Preto (UFOP). 2014.</li>
+											<li>Bachelor Thesis. Computer Science Department. <a href="https://ufop.br">Universidade Federal de Ouro Preto (UFOP)</a>. 2014.</li>
 
 											<ul class="list-inline">
 												<li class="list-inline-item"><a href="#bachelor-thesis"
