Updated PhD date

--- a/index.html
+++ b/index.html
@@ -2331,7 +2331,7 @@
 										<div class="resume-degree-org"><a
 												href="https://www.uni-saarland.de/en/">Universität des Saarlandes
 												(UdS)</a></div>
-										<div class="resume-degree-time">2018 - present</div>
+										<div class="resume-degree-time">2018 - 2023</div>
 									</li>
 									<li class="mb-2">
 										<div class="resume-degree font-weight-bold">MSc in Computer Science</div>
