--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-	<title>Johnnatan Messias</title>
+	<title>Dr. Johnnatan Messias</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="Johnnatan Messias">
+	<meta name="author" content="Dr. Johnnatan Messias">
 	<meta name="description"
-		content="I'm Johnnatan, a Research Scientist at Matter Labs. I hold a Ph.D. from the Max Planck Institute for Software Systems (MPI-SWS), earned in collaboration with Saarland University. My research primarily revolves around addressing fairness issues in blockchain technology and within the realm of Decentralized Finance (DeFi).">
+		content="I'm Dr. Johnnatan, a Research Scientist at Matter Labs. I hold a Ph.D. from the Max Planck Institute for Software Systems (MPI-SWS), earned in collaboration with Saarland University. My research primarily revolves around addressing fairness issues in blockchain technology and within the realm of Decentralized Finance (DeFi).">
 	<meta property="og:image" content="https://johnnatan-messias.github.io/assets/images/profile.jpg">
 	<meta property="og:image:type" content="image/jpeg">
 	<meta property="og:image:width" content="652">
@@ -133,7 +133,7 @@
 					<img class="mr-3 img-fluid picture mx-auto" src="assets/images/profile.jpg" alt="">
 					<div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 						<div class="primary-info">
-							<h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Johnnatan Messias</h1>
+							<h1 class="name mt-0 mb-1 text-white">Dr. Johnnatan Messias</h1>
 							<div class="title mb-2">Research Scientist at Matter Labs</div>
 							<ul class="list-unstyled">
 								<!-- <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2"
