--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Dr. Johnnatan Messias">
 	<meta name="description"
-		content="I'm Dr. Johnnatan, a Research Scientist at Matter Labs. I hold a Ph.D. from the Max Planck Institute for Software Systems (MPI-SWS), earned in collaboration with Saarland University. My research primarily revolves around addressing fairness issues in blockchain technology and within the realm of Decentralized Finance (DeFi).">
+		content="I'm Dr. Johnnatan Messias, a Research Scientist at Matter Labs. I hold a Ph.D. from the Max Planck Institute for Software Systems (MPI-SWS), earned in collaboration with Saarland University. My research primarily revolves around addressing fairness issues in blockchain technology and within the realm of Decentralized Finance (DeFi).">
 	<meta property="og:image" content="https://johnnatan-messias.github.io/assets/images/profile.jpg">
 	<meta property="og:image:type" content="image/jpeg">
 	<meta property="og:image:width" content="652">
