--- a/index.html
+++ b/index.html
@@ -198,12 +198,14 @@
 								href="https://homepages.dcc.ufmg.br/~fabricio/">Dr.
 								Fabrício Benevenuto</a> as my advisor. During my MSc, I also held two
 							research intern
-							positions at MPI-SWS in Saarbrücken, Germany. I studied Computer Science at Eötvös Loránd
-							University (<a href="https://www.elte.hu/en/">ELTE</a>) in Budapest, Hungary, in 2013/2014
-							during my exchange program (Science
+							positions at MPI-SWS in Saarbrücken, Germany. I completed my B.Sc. degree in
+							Computer Science at the Universidade
+							Federal de Ouro Preto (<a href="https://ufop.br">UFOP</a>), Brazil, in 2015. In 2013 and
+							2014, I did an exchange program at Eötvös Loránd
+							University (<a href="https://www.elte.hu/en/">ELTE</a>) in Budapest, Hungary, part of a
+							Brazilian exchange program (Science
 							Without Borders
-							- CAPES). I completed my undergraduate degree in Computer Science at the Universidade
-							Federal de Ouro Preto (<a href="https://ufop.br">UFOP</a>), Brazil, in 2015.
+							- CAPES).
 							<br>
 							<br>
 							I have also worked on machine learning projects for risk and loan default prediction and
@@ -239,7 +241,7 @@
 									<article class="resume position-relative mb-5">
 										<!--//resume-timeline-item-header-->
 
-										
+
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
@@ -291,7 +293,8 @@
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
-													The Writing is on the Wall: Analyzing the Boom of Inscriptions and its Impact on EVM-compatible Blockchains</h6>
+													The Writing is on the Wall: Analyzing the Boom of Inscriptions and
+													its Impact on EVM-compatible Blockchains</h6>
 											</li>
 											<li>
 												<script>document.write(get_authors(["johnnatan_messias", "krzysztof_gogol", "maria_silva", "benjamin_livshits"]))</script>
@@ -311,8 +314,28 @@
 											</ul>
 
 											<div id="arxiv-inscriptions" class="collapse">
-												<p class="font-italic"><b>Abstract:</b> Despite the level of attention given to rollups there is limited empirical research about their performance. To address this gap, we conduct a comprehensive data-driven analysis of the late 2023 transaction boom that is attributed to inscriptions: a novel approach to record data onto a blockchain with no outside server needed. Inscriptions were first introduced on the Bitcoin blockchain to allow for the representation of NFTs or ERC-20-like tokens without smart contracts, but were later spread to other blockchains.
-													This work examines the applications of inscription transactions in Ethereum and its major EVM-compatible rollups and their impact on blockchain scalability during periods of sudden transaction surges. We found that on certain days, inscription-related transactions comprised over 89% on Arbitrum, over 88% on zkSync Era, and over 53% on Ethereum. Furthermore, 99% of these transactions were related to the minting of meme coins, followed by limited trading activity. Unlike L1 blockchains, during periods of transaction surges, zkSync and Arbitrum experienced lower median gas fees, attributable to the compression of L2 transactions for a single L1 batch. Additionally, zkSync Era, a ZK rollup, demonstrated a stronger reduction in fees than optimistic rollups considered in our study: Arbitrum, Base, and Optimism.
+												<p class="font-italic"><b>Abstract:</b> Despite the level of attention
+													given to rollups there is limited empirical research about their
+													performance. To address this gap, we conduct a comprehensive
+													data-driven analysis of the late 2023 transaction boom that is
+													attributed to inscriptions: a novel approach to record data onto a
+													blockchain with no outside server needed. Inscriptions were first
+													introduced on the Bitcoin blockchain to allow for the representation
+													of NFTs or ERC-20-like tokens without smart contracts, but were
+													later spread to other blockchains.
+													This work examines the applications of inscription transactions in
+													Ethereum and its major EVM-compatible rollups and their impact on
+													blockchain scalability during periods of sudden transaction surges.
+													We found that on certain days, inscription-related transactions
+													comprised over 89% on Arbitrum, over 88% on zkSync Era, and over 53%
+													on Ethereum. Furthermore, 99% of these transactions were related to
+													the minting of meme coins, followed by limited trading activity.
+													Unlike L1 blockchains, during periods of transaction surges, zkSync
+													and Arbitrum experienced lower median gas fees, attributable to the
+													compression of L2 transactions for a single L1 batch. Additionally,
+													zkSync Era, a ZK rollup, demonstrated a stronger reduction in fees
+													than optimistic rollups considered in our study: Arbitrum, Base, and
+													Optimism.
 
 												</p>
 											</div>
