Added ZKsync data paper

--- a/index.html
+++ b/index.html
@@ -242,6 +242,45 @@
 										<!--//resume-timeline-item-header-->
 
 
+
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													A Public Dataset For the ZKsync Rollup</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["maria_silva", "johnnatan_messias",  "benjamin_livshits"]))</script>
+
+											</li>
+											<li>Pre print.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#arxiv-zksync-data"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a href="pdf/data-strategy-for-zksync.pdf"
+														target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+											</ul>
+
+											<div id="arxiv-zksync-data" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> Despite blockchain data being publicly available, practical challenges and high costs often hinder its effective use by
+													researchers, thus limiting data-driven research and exploration in the blockchain space. This is especially true when it
+													comes to Layer 2 (L2) ecosystems, and ZKsync, in particular. To address these issues, we have curated a dataset from 1 year of activity extracted from a ZKsync Era archive node and
+													made it freely available to external parties. In this paper, we provide details on this dataset and how it was created,
+													showcase a few example analyses that can be performed with it, and discuss some future research directions. We also
+													publish and share the code used in our analysis on GitHub to promote reproducibility and to support further research.
+
+												</p>
+											</div>
+										</ul>
+
+
+
+
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
