Added pointer to the ZKsync data repo

--- a/index.html
+++ b/index.html
@@ -264,6 +264,11 @@
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
+												<li class="list-inline-item"><a
+													href="https://github.com/matter-labs/zksync-data-dump"
+													target="_blank">
+													<span class="badge badge-warning badge-pill">Data</span>
+												</a></li>
 											</ul>
 
 											<div id="arxiv-zksync-data" class="collapse">
