Added Marble award

--- a/index.html
+++ b/index.html
@@ -266,8 +266,9 @@
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
-												<li class="list-inline-item">
-														<span class="badge badge-success badge-pill">Best paper award</span>
+												<li class="list-inline-item"><a href="pdf/award/MARBLE2024_Best_paper_award.pdf"
+													target="_blank">
+														<span class="badge badge-success badge-pill">Best paper award</span></a>
 													</li>
 											</ul>
 
