--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Dr. Johnnatan Messias">
 	<meta name="description"
-		content="I'm Dr. Johnnatan Messias, a Research Scientist at Matter Labs. I hold a Ph.D. from the Max Planck Institute for Software Systems (MPI-SWS), earned in collaboration with Saarland University. My research primarily revolves around addressing fairness issues in blockchain technology and within the realm of Decentralized Finance (DeFi).">
+		content="I'm Dr. Johnnatan Messias, a Research Scientist. I hold a Ph.D. from the Max Planck Institute for Software Systems (MPI-SWS), earned in collaboration with Saarland University. My research primarily revolves around addressing fairness issues in blockchain technology and within the realm of Decentralized Finance (DeFi).">
 	<meta property="og:image" content="https://johnnatan-messias.github.io/assets/images/profile.jpg">
 	<meta property="og:image:type" content="image/jpeg">
 	<meta property="og:image:width" content="652">
@@ -141,7 +141,7 @@
 					<div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 						<div class="primary-info">
 							<h1 class="name mt-0 mb-1 text-white">Dr. Johnnatan Messias</h1>
-							<div class="title mb-2">Research Scientist at Matter Labs</div>
+							<div class="title mb-2">Research Scientist</div>
 							<ul class="list-unstyled">
 								<!-- <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2"
 											data-fa-transform="grow-3"></i>johnme [AT] mpi-sws [DOT] org</a></li> -->
